<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美女糗事</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="news_title">新闻资讯</string>
    <string name="msgSuccess">保存成功</string>
    <string name="msgFail">保存失败</string>
    <string name="mTitle">图片</string>
    <string name="mrefresh">下拉刷新</string>
    <string name="mrelease_refresh">放开以刷新</string>
    <string name="mrefreshing">正在刷新</string>
    <string name="mshareContent">美女糗事</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="collect">收藏</string>
    <string name="adjust_size">字体调节</string>
    <string name="collect_folder">进入收藏夹</string>
    <string name="fankui">用户反馈</string>
    <string name="jingxuan">精选应用</string>
    <string name="jingxuan1">精彩Android应用</string>
    <string name="title_activity_adjust">AdjustActivity</string>
    <string name="font_size_small">12号字体大小</string>
    <string name="font_size_mid">16号字体大小</string>
    <string name="font_size_large">24号字体大小</string>
    <string name="font_size_larger">32号字体大小</string>
    <string name="small">小号</string>
    <string name="mid">默认</string>
    <string name="large">大号</string>
    <string name="larger">加大号</string>
    <string name="testCity">兴宁</string>
    <string name="title_activity_favourite">收藏夹</string>
    <string name="add_fav_success">收藏成功</string>
    <string name="adjust_size_success">字体调节成功</string>
    <string name="city_replace_w">市</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="download">下载</string>
    <string name="title_activity_video">VideoActivity</string>
 <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
        <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
