<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    android:id="@+id/root"
    >
  <RelativeLayout android:id="@+id/top_bg"
       android:background="@drawable/top_bar_bg" 
       android:layout_width="match_parent"
       android:layout_height="54dp"
       >
       <ImageView android:id="@+id/back" 
           android:layout_width="54dp" 
           android:layout_height="54dp"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:background="@drawable/back"/>
      <TextView android:id="@+id/titile_txt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:text="@string/adjust_size"
          android:layout_marginRight="10dp"
          android:textSize="20sp"
          android:textColor="#808080"
          />
       
  </RelativeLayout>  

      
   <RelativeLayout   
    android:id="@+id/small_container" 
     android:layout_width="match_parent"
    android:layout_height="81dp"
    android:orientation="horizontal" 
    >
  <ImageView
                    android:id="@+id/select1"
                    android:layout_width="5dp"
                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
               
                    android:layout_marginRight="8dp"
                    android:src="@drawable/select" />
  <TextView 
      android:id="@+id/small"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/select1"
      android:layout_marginTop="30dp"
      android:textColor="@android:color/black"
      android:textSize="12sp"
      android:textStyle="bold" 

      android:text="@string/small"/>
  
   <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/small"
      android:layout_toRightOf="@id/select1"
      android:layout_marginTop="4dp"
      android:textColor="#808080"
      android:textSize="12sp"
      android:text="@string/font_size_small"/>
</RelativeLayout>
     <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"  
                    android:src="@drawable/line" /> 
                    
     
   <RelativeLayout   
    android:id="@+id/mid_container" 
     android:layout_width="match_parent"
    android:layout_height="81dp"
    android:orientation="horizontal" 
    >
  <ImageView
                    android:id="@+id/select2"
                    android:layout_width="5dp"
                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
               
                    android:layout_marginRight="8dp"
                    android:src="@drawable/select" />
  <TextView 
      android:id="@+id/mid"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/select2"
      android:layout_marginTop="30dp"
      android:textColor="@android:color/black"
      android:textSize="16sp"
      android:textStyle="bold" 

      android:text="@string/mid"/>
  
   <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/mid"
      android:layout_toRightOf="@id/select2"
      android:layout_marginTop="4dp"
      android:textColor="#808080"
      android:textSize="16sp"
      android:text="@string/font_size_mid"/>
</RelativeLayout>
     <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"  
                    android:src="@drawable/line" />    

     
  <RelativeLayout   
    android:id="@+id/large_container" 
     android:layout_width="match_parent"
    android:layout_height="81dp"
    android:orientation="horizontal" 
    >
  <ImageView
                    android:id="@+id/select3"
                    android:layout_width="5dp"
                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
               
                    android:layout_marginRight="8dp"
                    android:src="@drawable/select" />
  <TextView 
      android:id="@+id/large"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/select3"
      android:layout_marginTop="20dp"
      android:textColor="@android:color/black"
      android:textSize="22sp"
      android:textStyle="bold" 

      android:text="@string/large"/>
  
   <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/large"
      android:layout_toRightOf="@id/select3"
      android:layout_marginTop="4dp"
      android:textColor="#808080"
      android:textSize="22sp"
      android:text="@string/font_size_large"/>
</RelativeLayout>
     <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"  
                    android:src="@drawable/line" />  
                    
     
  <RelativeLayout   
    android:id="@+id/larger_container" 
     android:layout_width="match_parent"
    android:layout_height="81dp"
    android:orientation="horizontal" 
    >
  <ImageView
                    android:id="@+id/select4"
                    android:layout_width="5dp"
                    android:layout_height="81dp"
                    android:layout_marginLeft="20dp"
               
                    android:layout_marginRight="8dp"
                    android:src="@drawable/select" />
  <TextView 
      android:id="@+id/larger"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/select4"
      android:layout_marginTop="10dp"
      android:textColor="@android:color/black"
      android:textSize="28sp"
      android:textStyle="bold" 

      android:text="@string/larger"/>
  
   <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/larger"
      android:layout_toRightOf="@id/select4"
      android:layout_marginTop="4dp"
      android:textColor="#808080"
      android:textSize="28sp"
      android:text="@string/font_size_larger"/>
</RelativeLayout>
</LinearLayout>
