<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    >
<LinearLayout    
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    >
 <TextView 
      android:id="@+id/time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="30sp"
      android:layout_marginLeft="25dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:text="@string/share"/>   
      
  <TextView 
      android:id="@+id/other_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="12sp"
      android:layout_marginLeft="25dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:text="@string/share"/>  
      
<LinearLayout   
    android:id="@+id/share_container" 
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@drawable/selector"
    >
  <ImageView
                    android:id="@+id/share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/share1" />
  <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/share"/>
</LinearLayout>
     <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"  
                    android:src="@drawable/line1" />           
<LinearLayout
     android:id="@+id/comment_container"     
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
     android:background="@drawable/selector"
    >
                <ImageView
                     android:id="@+id/comment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
               
                    android:src="@drawable/comment" />
                  <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/comment"/>
                </LinearLayout>
       <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:src="@drawable/line1" />                
                
            <LinearLayout
     android:id="@+id/collect_container"     
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     android:background="@drawable/selector" 
    >
         <ImageView
                     android:id="@+id/collect"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                   
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/collect" />
            <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/collect"/>
         </LinearLayout>
         
       <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:src="@drawable/line1" />                
   <LinearLayout
      android:id="@+id/adjust_container"       
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     android:background="@drawable/selector" 
    >
                 <ImageView
                     android:id="@+id/adjust"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                       
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/adjust_size" />
                <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/adjust_size"/>   
    </LinearLayout>             
                <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:src="@drawable/line1" />     
                    
     <LinearLayout
    android:id="@+id/collect_folder_container"     
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
     android:background="@drawable/selector"
    >           
                <ImageView
                     android:id="@+id/collect_folder"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                     
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/collect_folder" />
              <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/collect_folder"/>     
    </LinearLayout>          
              <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:src="@drawable/line1" /> 
         <LinearLayout 
     android:id="@+id/fankui_container"             
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
     android:background="@drawable/selector"
    >           
                     <ImageView
                     android:id="@+id/fankui"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                   
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/fankui" />
       <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="17sp"
      android:layout_gravity="center" 
      android:text="@string/fankui"/>               
    </LinearLayout>          
              <ImageView
                 
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:src="@drawable/line1" />   
                    
     <RelativeLayout 
     android:id="@+id/look_more_container"             
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
     android:background="@drawable/selector"
    >    
     <TextView 
          android:id="@+id/jingxuan"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      android:layout_gravity="center" 
       android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
      android:text="@string/jingxuan"/>
     
      <TextView 
      android:id="@+id/jingxuan1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="12sp"
      android:layout_gravity="center" 
             android:layout_marginLeft="20dp"
             android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
       android:textColor="@android:color/white"
      android:text="@string/jingxuan1"
      android:layout_below="@id/jingxuan"/>
      
      <ImageView android:layout_width="69dp"
          android:layout_height="26dp"
          android:layout_alignParentRight="true"
          android:layout_centerInParent="true"
          android:layout_marginRight="10dp"
          android:background="@drawable/look_more"/>
     </RelativeLayout>          
  </LinearLayout>
</ScrollView>